# speech-mcp

./: .env.example  MANIFEST.in  README.md  install_speech_mcp.sh  pyproject.toml  test_all_tts_complete.py  uninstall.sh
src/speech_mcp/: __init__.py  audio_processor.py  constants.py  server.py  speech_recognition.py  streaming_transcriber.py
src/speech_mcp/resources/: transcription_guide.md
src/speech_mcp/tts_adapters/: __init__.py  direct_adapter.py  openai_adapter.py  openai_stt_adapter.py  voices_override.py
src/speech_mcp/ui/components/: tts_adapter.py
src/speech_mcp/ui/pyqt/: direct_speak.py  pyqt_ui.py
src/speech_mcp/utils/: __init__.py  direct_tts.py  process_manager.py  sound_player.py  temp_file_manager.py  tts_helper.py
